# RAPID

./: .gitignore  Aggregator.py  README.md  global_model.py  main.py  model.py  pretrain.py  pyproject.toml  test.py  train.py  utils.py
analysis/: intrachain-analysis.MD  training_analysis_summary.md
data/RAPID/: labels.txt  stat.txt  test.txt  train.txt  valid.txt
experiments/: lscf_baseline.py  run_diagnostics.py
scripts/: analyze_intrachain_extended.py  analyze_intrachain_followup.py  analyze_intrachain_hypotheses.py  analyze_intrachain_signal.py
src/: README.md  __init__.py  config.py  evaluate.py  pretrain.py  train.py
src/analysis/: __init__.py  base.py  data_structures.py  heatmap.py  manager.py  metrics_plots.py  reports.py  results_manager.py  temporal_and_stability_analysis.py
src/analysis/analytics/: __init__.py  metrics_calculator.py
src/analysis/config/: __init__.py  analysis_config.py
src/analysis/data/: __init__.py  data_loader.py  data_processor.py
src/analysis/multi_replica/: __init__.py  analyzer.py  cli.py  combined_analysis.py  data_structures.py  plotter.py
src/analysis/raw_analysis/: __init__.py  stability.py  temporal.py
src/analysis/visualization/: __init__.py  base_plotter.py  combined_heatmap.py  heatmap_plotter.py  metrics_plotter.py  visualization_manager.py
src/core/: __init__.py
src/data/: __init__.py  dataset.py  node_features.py  preprocessing.py  sampler.py
src/losses/: __init__.py
src/metrics/: __init__.py
src/models/: __init__.py  aggregator.py  classifier.py  encoder.py  global_model.py  rapid.py  rgcn.py
(+409 files in other folders)
