[project]
name = "re-net"
version = "0.1.0"
description = "Recurrent Event Network: Autoregressive Structure Inference over Temporal Knowledge Graphs"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy<2",
    "torch==2.1.2",
    "dgl==1.1.3",
    "scikit-learn",
    "packaging",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[tool.uv]
no-build-isolation-package = ["dgl"]
